# Opspilot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  main.py
app/api/: routes.py
app/db/: postgres.py  redis.py
app/observability/: models.py
app/rag/: __init__.py  bm25_index.py  chunker.py  embedder.py  reranker.py  retriever.py  vector_store.py
knowledge_base/api_docs/: order_api.md
knowledge_base/faqs/: account_and_orders.md  delivery_and_shipping.md  payments_and_billing.md  returns_and_refunds.md  seller_and_marketplace.md
knowledge_base/policies/: cancellation_policy.md  cod_policy.md  delivery_sla_policy.md  refund_policy.md
knowledge_base/tickets/: ticket_001.md  ticket_002.md  ticket_003.md  ticket_004.md  ticket_005.md  ticket_006.md  ticket_007.md  ticket_008.md  ticket_009.md  ticket_010.md  ticket_011.md  ticket_012.md
scripts/: ingest_knowledge.py
tests/: test_chunker.py  test_health.py  test_retriever.py
